Bugfix for form array alignment

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -88,7 +88,7 @@ input.big {
 select {
   height: auto;
   min-height: 22px;
-  margin: auto;
+  margin: 0 auto;
 
   &.big {
     outline: none !important;
